# fast-setup

./: .gitignore  LICENSE  README.md  fast-setup.sh  install.sh  install_fast_setup.sh  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
fast-setup/: fast-setup.sh  template.conf
fast-setup/templates/: template.conf
fast_setup/: README.md  fast_setup.py
fast_setup/templates/: structure.yaml
legacy/v1-bash/: README.md  fast-setup.sh
legacy/v2-python-json/: README.md  fast-setup.py
legacy/v3-python-yaml/: README.md  fast-setup.py
legacy/v4-python-full/: fast-setup.py
legacy/v4-python-full/templates/: makefile
templates/: Makefile  old_Makefile  template.conf
tests/: test_fast_setup.py
v2-python-json/: README.md  fast-setup.py
v2-python-json/templates/: structure.json
v3-python-yaml/: README.md  fast-setup.py
v3-python-yaml/templates/: structure.yaml
v4-python-full/: README.md  fast-setup.py
v4-python-full/templates/: structure.json  structure.yaml
