[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-setup"
version = "0.5.0"
description = "Herramienta para generar estructuras de proyecto rápidamente"
authors = [{ name = "Tomás Pino Pérez" }]
dependencies = ["pyyaml", "toml"]

[project.scripts]
fast-setup = "fast_setup.fast_setup:main"

[tool.setuptools]
packages = ["fast_setup"]

[tool.setuptools.package-data]
fast_setup = ["templates/*", "../pyproject.toml"]